--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Movie</title>
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
-    <ul class="movie-list row list-unstyled border-success"></ul>
+    <ul class="movie-list row list-unstyled border-2 border-dark"></ul>
   </div>
 
   <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
