add changes style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <div class="container">
-    <ul class="movie-list row list-unstyled border-2 border-dark"></ul>
+    <h2 class="heading mt-3 fs-1 fw-bold text-success text-center">Movies</h2>
+    <ul class="movie-list row list-unstyled"></ul>
   </div>
 
   <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
